--- a/PagesTheme/manifest.json
+++ b/PagesTheme/manifest.json
@@ -13,7 +13,7 @@
     "permissions": ["storage", "scripting", "tabs", "activeTab"],
     "web_accessible_resources": [
         {
-            "resources": [ "style.css" ],
+            "resources": [ "style.css", "modules/changePageTheme.js" ],
             "matches": [ "<all_urls>" ]
         }
     ]
