--- a/YTSpeed/manifest.json
+++ b/YTSpeed/manifest.json
@@ -4,7 +4,8 @@
     "version": "1.0",
     "manifest_version": 3,
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "type": "module"
     },
     "content_scripts" : [{
         "js" : ["content.js"],
@@ -15,5 +16,11 @@
         "default_popup" : "popup.html"
     },
     "permissions": ["storage", "scripting", "tabs", "activeTab", "notifications"],
-    "host_permissions": ["<all_urls>"]
+    "host_permissions": ["<all_urls>"],
+    "web_accessible_resources": [
+        {
+            "resources": ["modules/changeYTSpeed.js" ],
+            "matches": [ "<all_urls>" ]
+        }
+    ]
 }
